--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <main class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -22,8 +22,10 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </main>
-    <div class="hero"></div>
+    </header>
+    
+    <main class="hero"></main>
+
     <article class="content">
         <div Id="search-engine-optimization" class="search-engine-optimization">
             <img src="./images/search-engine-optimization.jpg" alt="Search Engine" class="float-left"; />
@@ -41,6 +43,7 @@
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </div>
     </article>
+
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -58,10 +61,13 @@
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </div>
     </aside>
+
     <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <h4>&copy; 2019 Horiseon Social Solution Services, Inc.</h4>
     </footer>
+
+    
 </body>
 
 </html>
